Return error for each account that we failed to retrieve balance for + formatting
